# Drone-Control

./: README.md
UADIB/: .env.example  .gitignore  Makefile  README.md  config.yaml  main.py  pyproject.toml  requirements.txt
UADIB/ai/: capability_classifier.py  system_inference_model.py
UADIB/api/: camera_stream.py  drone_control_endpoints.py  server.py  uarip_endpoints.py
UADIB/core/: capability_mapper.py  device_identity.py  drone_profiler.py  mission_builder.py  models.py  protocol_detector.py  runtime.py  safety.py
UADIB/frontend/: package.json  tsconfig.json
UADIB/plugins/: base.py  camera_plugin.py  lidar_plugin.py  plugin_manager.py
UADIB/protocols/: base.py  cpp_adapter.cpp  mavlink_adapter.py  ros2_adapter.py  sdk_adapter.py
UADIB/scripts/: master_run.sh  run_dev.sh
UADIB/security/: authentication.py  permission_manager.py
UADIB/simulator/: mock_drone.py
UADIB/telemetry/: Cargo.toml  telemetry_parser.rs  telemetry_stream.py
UADIB/tests/: test_api.py  test_capability_mapper.py  test_controls_extended.py  test_dashboard.py  test_device_identity.py  test_mission_builder.py  test_preflight.py  test_protocol_detector.py  test_real_connect_camera.py  test_uarip.py  test_ui_root.py
UADIB/uadib.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
UADIB/uarip/: README.md
UADIB/uarip/protocol_ai/: neural_protocol_inference.py  protocol_reverse_engine.py
UADIB/uarip/robot_graph/: capability_graph.py
UADIB/uarip/security/: anomaly_monitor.py
UADIB/ui/: dashboard_generator.ts  dashboard_schema.py  map_view.ts
UADIB/ui/web/: app.js  (+8 more)
(+4 files in other folders)
